infrastructure/hackaton_stack.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation Template to create master and node for Kubernetes cluster
Transform: 'AWS::Serverless-2016-10-31'

Parameters:
  S3BucketParam:
    Type: String
    Default: factory-ci-cd
    Description: Bucket name

  ZoneIdParam:
    Description: ID of the availability zone
    Type: String
    Default: eu-central-1

  AccountIdParam:
    Description: ID of the AWS account
    Type: String
    Default: 781648067507

  S3CommonsKeyParam:
    Type: String
    Default: applications/lambda/commons.zip
    Description: Commons key param

  RegionParam:
    Description: Region of the AWS resources
    Type: String
    Default: eu-central-1

  NodeAmi:
    Description: OS image, default ubuntu 20.04
    Type: String
    Default: ami-0ab1a82de7ca5889c

  MasterImageIdParam:
    Description: ID of the AMI to use for EC2 instances
    Type: String
    Default: ami-034c3fe427642f7f9

  NodeImageIdParam:
    Description: ID of the AMI to use for EC2 instances
    Type: String
    Default: ami-0dbb32291d7a89b1f

  MasterPrivateAddressParam:
    Description: Master private ip
    Type: String
    Default: 172.31.15.100

  SlaveNodePrivateAddressParam1:
    Description: Slave 1 private ip
    Type: String
    Default: 172.31.5.64

  SlaveNodePrivateAddressParam2:
    Description: Slave 2 private ip
    Type: String
    Default: 172.31.5.65

  VpcCidrParam:
    Description: Cidr param
    Type: String
    Default: 172.31.0.0/16

  FirstPublicSubnetAvailabilityZoneParam:
    Description: Public subnet availability zone
    Type: String
    Default: eu-central-1b

  SecondPublicSubnetAvailabilityZoneParam:
    Description: First public subnet availability zone
    Type: String
    Default: eu-central-1a

  FirstPublicSubnetCidrParam:
    Description: Public subnet cidr param
    Type: String
    Default: 172.31.0.0/20

  SecondPublicSubnetCidrParam:
    Description: Second public subnet cidr param
    Type: String
    Default: 172.31.240.0/20

  PublicRouteCidrParam:
    Description: Public route cidr param
    Type: String
    Default: "0.0.0.0/0"

  KeyPairNameParam:
    Description: EC2 Kubernetes cluster keypair name
    Type: String
    Default: KeyPair

  SecurityGroupNameParam:
    Description: Name of the security group
    Type: String
    Default: SecurityGroupNameParam

  MasterInstanceTypeParam:
    Description: Master instance type
    Type: String
    Default: t3.medium
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      - t3.medium
      - t3.micro

  CommonNodeInitScriptParam:
    Type: String
    Default: |
      #!/bin/bash
      set -euxo pipefail
      KUBERNETES_VERSION="1.28.9-2.1"
      sudo swapoff -a
      (crontab -l 2>/dev/null; echo "@reboot /sbin/swapoff -a") | crontab - || true
      sudo apt-get update -y
      OS="xUbuntu_20.04"
      VERSION="1.28"

      # Create the .conf file to load the modules at bootup
      cat <<EOF | sudo tee /etc/modules-load.d/crio.conf
      overlay
      br_netfilter
      EOF

      sudo modprobe overlay
      sudo modprobe br_netfilter

      # Set up required sysctl params, these persist across reboots.
      cat <<EOF | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf
      net.bridge.bridge-nf-call-iptables  = 1
      net.ipv4.ip_forward                 = 1
      net.bridge.bridge-nf-call-ip6tables = 1
      EOF

      sudo sysctl --system

      # Install container runtime
      sudo apt-get update -y
      sudo apt install docker.io -y
      systemctl start docker
      
      cat <<EOF | sudo tee /etc/docker/daemon.json
      {
        "exec-opts": ["native.cgroupdriver=systemd"],
        "log-driver": "json-file",
        "log-opts": {
          "max-size": "100m"
        },
        "storage-driver": "overlay2"
      }
      EOF
      
      systemctl daemon-reload
      systemctl enable docker
      systemctl restart docker
      systemctl status docker

      # Install kubelet, kubectl and Kubeadm
      sudo apt-get update -y
      sudo apt-get install -y apt-transport-https ca-certificates curl
      sudo mkdir /etc/apt/keyrings
      curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
      
      echo "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /" | sudo tee /etc/apt/sources.list.d/kubernetes.list
      sudo apt-get update -y
      sudo apt-get install -y kubelet="$KUBERNETES_VERSION" kubectl="$KUBERNETES_VERSION" kubeadm="$KUBERNETES_VERSION"
      sudo apt-get update -y
      sudo apt-get install -y jq

      local_ip="$(ip --json addr show ens5 | jq -r '.[0].addr_info[] | select(.family == "inet") | .local')" ###
      cat > /etc/default/kubelet << EOF
      KUBELET_EXTRA_ARGS=--node-ip=$local_ip
      EOF
      
      # install python3 tools
      sudo apt install python3-pip -y
      pip3 install awscli
      pip3 install pydantic
      pip3 install boto3
      pip3 install kubernetes
      aws codeartifact login --tool pip --repository FactoryRepository --domain factory --domain-owner 781648067507 --region eu-central-1
      pip install pythoncommons
      
      # pull cicd tools
      aws s3 cp s3://factory-ci-cd/applications/cicd/ ./ --recursive

  MasterNodeInitScriptParam:
    Type: String
    Default: |
      #!/bin/bash
      # Setup for Control Plane (Master) servers
      set -euxo pipefail
      
      NODENAME=$(hostname -s)
      POD_CIDR="10.244.0.0/16" # must be 10.244.0.0 bcs it's hardcoded in flannel .yml
      INTERFACE_NAME=ens5
      HOME=/home/ubuntu
      KUBE_CFG_DIR="$HOME"/.kube/config
      DEFAULT_USER=ubuntu
      KUBE_JOIN_TOKEN="/CICD/KUBE_JOIN_TOKEN"
      REGION="eu-central-1"
      NAMESPACE=factory
      
      # Pull required images
      sudo kubeadm config images pull
      
      # Init with private ip
      MASTER_PRIVATE_IP=$(ip addr show ${INTERFACE_NAME} | awk '/inet / {print $2}' | cut -d/ -f1)
      sudo kubeadm init --apiserver-advertise-address="$MASTER_PRIVATE_IP" --apiserver-cert-extra-sans="$MASTER_PRIVATE_IP" --pod-network-cidr="$POD_CIDR" --node-name "$NODENAME" --ignore-preflight-errors Swap
      
      # Configure kubeconfig
      mkdir -p "$HOME"/.kube
      sudo cp -i /etc/kubernetes/admin.conf ${KUBE_CFG_DIR}
      sudo chown "$(id -u)":"$(id -g)" ${KUBE_CFG_DIR}
      
      # Install Helm
      curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
      sudo apt-get install apt-transport-https --yes
      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
      sudo apt-get update -y
      sudo apt-get install helm -y
      
      # Install Plugin Network 
      sudo kubectl apply -f kube/cni.yml --kubeconfig=${KUBE_CFG_DIR}
      
      # Create namespace for applications
      kubectl create namespace ${NAMESPACE} --kubeconfig=${KUBE_CFG_DIR}
      
      # Send join command to parameter store
      sudo kubeadm token create --print-join-command > tkn_cmd
      aws ssm put-parameter --name ${KUBE_JOIN_TOKEN} --value "$(cat tkn_cmd)" --type String --overwrite --region ${REGION}
      
      # Release kube config dir
      sudo chown ${DEFAULT_USER} ${KUBE_CFG_DIR}
      
      # Others
      echo "alias k='kubectl'" >> /home/ubuntu/.bashrc
      sudo apt install net-tools -y
      sudo apt install postgresql-client -y
      
      python3 functions/send_master_ready_event.py
      
      # Wait for all nodes ready 
      python3 functions/wait_for_all_nodes_ready.py
      
      # Reset coredns
      sudo kubectl -n kube-system rollout restart deployment coredns --kubeconfig=${KUBE_CFG_DIR}
      
      # Install ingress controller
      sudo helm repo add nginx https://kubernetes.github.io/ingress-nginx
      sudo helm install --create-namespace --namespace ingress-nginx ingress-nginx nginx/ingress-nginx --set controller.hostNetwork=true --kubeconfig=${KUBE_CFG_DIR}
      
      # If i need bare metal load balancer, then i should follow these instructions
      # https://github.com/morrismusumi/kubernetes/tree/main/clusters/homelab-k8s/apps/metallb-plus-nginx-ingress
      # https://metallb.universe.tf/
      # Remember about enable traffic on port 7946 (TCP & UDP)

  DatabaseVolumeId:
    Description: Id of database volume
    Type: String
    Default: vol-009ccb65cab60b569

  SlaveNodeInitScriptParam:
    Type: String
    Default: |
      #!/bin/bash
      set -euxo pipefail
      
      KUBE_JOIN_TOKEN="/CICD/KUBE_JOIN_TOKEN"
      
      # Wait for master to be ready
      python3 functions/receive_master_ready_event.py
      
      # Join to master
      aws ssm get-parameter --name ${KUBE_JOIN_TOKEN} --query "Parameter.Value" --output text --region "eu-central-1" | sudo bash

  DatabaseSlaveNodeInitScriptParam:
    Type: String
    Default: |
      #!/bin/bash
      # Invoke it after attaching gp2 to an instance
      
      DEVICE_NAME=nvme1n1
      
      # mount it
      sudo mkdir /database
      sudo mount /dev/${DEVICE_NAME} /database
      sudo chmod 777 /database

  NodeInstanceTypeParam:
    Description: Node instance type
    Type: String
    Default: t3.medium
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      - t3.medium
      - t3.micro

Resources:

  PowertoolsLambdaLayer:
    Type: AWS::Serverless::LayerVersion
    Properties:
      Description: AWS Lambda Layer for aws-lambda-powertools version 2.25.1
      LayerName: aws-lambda-powertools-python-layer
      ContentUri:
        Bucket: awsserverlessrepo-changesets-1xxlnameudh3r
        Key: 781648067507/arn:aws:serverlessrepo:eu-west-1:057560766410:applications-aws-lambda-powertools-python-layer-versions-2.25.1/2808c803-98e5-4e17-a82c-80f7db4cbe0f
      CompatibleRuntimes:
        - python3.11
      LicenseInfo: Available under the Apache-2.0 license.
      RetentionPolicy: Retain
    Metadata:
      SamResourceId: LambdaLayer

  CommonsLambdaLayer:
    Type: AWS::Lambda::LayerVersion
    Properties:
      LayerName: CommonsLambdaLayer
      Content:
        S3Bucket: !Ref S3BucketParam
        S3Key: !Ref S3CommonsKeyParam
      CompatibleRuntimes:
        - python3.11

  CICDSNSTopic:
    Type: AWS::SNS::Topic
    Properties:
      DisplayName: CICDSNSTopic
      FifoTopic: true

  CICDTopicArnSsmParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: "/CICD/CICDTopicArn"
      Type: String
      Value: !Ref CICDSNSTopic

  CICDSQSQueue:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: CICDSQSQueue

  CICDSNSTopicSubscription:
    Type: AWS::SNS::Subscription
    Properties:
      Endpoint: !GetAtt CICDSQSQueue.Arn
      Protocol: sqs
      TopicArn: !Ref CICDSNSTopic

  CICDQueueArnSsmParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: "/CICD/CICDQueueUrl"
      Type: String
      Value: !Ref CICDSQSQueue

  CICDQueuePolicy:
    Type: AWS::SQS::QueuePolicy
    Properties:
      Queues:
        - !Ref CICDSQSQueue
      PolicyDocument:
        Version: "2008-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: sns.amazonaws.com
            Action: sqs:SendMessage
            Resource: !GetAtt CICDSQSQueue.Arn
            Condition:
              ArnEquals:
                aws:SourceArn: !Ref CICDSNSTopic

  CodeBuildPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: VisualEditor0
            Effect: Allow
            Action:
              - logs:CreateLogGroup
              - logs:PutLogEvents
              - logs:CreateLogStream
              - codebuild:CreateReportGroup
              - codebuild:CreateReport
              - codebuild:UpdateReport
              - codebuild:BatchPutCodeCoverages
              - codebuild:BatchPutTestCases
              - codeartifact:GetAuthorizationToken
              - codeartifact:ReadFromRepository
              - codeartifact:GetRepositoryEndpoint
              - codeartifact:PutPackageMetadata
              - codeartifact:PublishPackageVersion
            Resource:
              - !Sub arn:aws:codeartifact:${ZoneIdParam}:${AccountIdParam}:repository/factory/FactoryRepository
              - !Sub arn:aws:codeartifact:${ZoneIdParam}:${AccountIdParam}:package/factory/FactoryRepository/*/*/*
              - !Sub arn:aws:codeartifact:${ZoneIdParam}:${AccountIdParam}:domain/factory
              - !Sub arn:aws:logs:${ZoneIdParam}:${AccountIdParam}:log-group:/aws/codebuild/*
              - !Sub arn:aws:codebuild:${ZoneIdParam}:${AccountIdParam}:report-group/*
          - Sid: VisualEditor1
            Effect: Allow
            Action:
              - s3:ListBucket
              - s3:GetBucketAcl
              - s3:PutObject
              - s3:GetObject
              - s3:DeleteObject
              - s3:GetBucketLocation
              - s3:List*
              - s3:CreateBucket
              - s3:GetObjectVersion
              - sts:GetServiceBearerToken
              - ec2:CreateNetworkInterface
              - ec2:DescribeDhcpOptions
              - ec2:DescribeNetworkInterfaces
              - ec2:DeleteNetworkInterface
              - ec2:DescribeSubnets
              - ec2:DescribeSecurityGroups
              - ec2:DescribeVpcs
              - lambda:UpdateFunctionCode
              - lambda:PublishLayerVersion
              - states:UpdateStateMachine
              - states:PublishStateMachineVersion
            Resource: '*'
          - Effect: "Allow"
            Action:
              - sns:Publish
              - sns:Subscribe
            Resource: !Sub arn:aws:sns:${ZoneIdParam}:${AccountIdParam}:*
          - Effect: "Allow"
            Action:
              - ssm:GetParameter
              - ssm:GetParameters
              - ssm:GetParametersByPath
              - ssm:PutParameter
            Resource: "*"

  CodeBuildRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: codebuild.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - !Ref CodeBuildPolicy

  DatabaseCodeBuildProject:
    Type: AWS::CodeBuild::Project
    Properties:
      Name: DatabaseCodeBuildProject
      ServiceRole: !GetAtt CodeBuildRole.Arn
      Artifacts:
        Type: NO_ARTIFACTS
      Environment:
        Type: LINUX_CONTAINER
        PrivilegedMode: true
        ComputeType: BUILD_GENERAL1_SMALL
        Image: aws/codebuild/standard:7.0
        EnvironmentVariables:
          - Name: BUCKET_NAME
            Type: PLAINTEXT
            Value: factory-ci-cd
          - Name: PROJECT_NAME
            Type: PLAINTEXT
            Value: database
      Source:
        Type: GITHUB
        Location: https://github.com/MySensorFactory/database
        GitCloneDepth: 1

  KafkaCodeBuildProject:
    Type: AWS::CodeBuild::Project
    Properties:
      Name: KafkaCodeBuildProject
      ServiceRole: !GetAtt CodeBuildRole.Arn
      Artifacts:
        Type: NO_ARTIFACTS
      Environment:
        Type: LINUX_CONTAINER
        PrivilegedMode: true
        ComputeType: BUILD_GENERAL1_SMALL
        Image: aws/codebuild/standard:7.0
        EnvironmentVariables:
          - Name: BUCKET_NAME
            Type: PLAINTEXT
            Value: factory-ci-cd
          - Name: PROJECT_NAME
            Type: PLAINTEXT
            Value: kafka
      Source:
        Type: GITHUB
        Location: https://github.com/MySensorFactory/kafka
        GitCloneDepth: 1

  PythonCommonsCodeBuildProject:
    Type: AWS::CodeBuild::Project
    Properties:
      Name: PythonCommonsCodeBuildProject
      ServiceRole: !GetAtt CodeBuildRole.Arn
      Artifacts:
        Type: NO_ARTIFACTS
      Environment:
        Type: LINUX_CONTAINER
        PrivilegedMode: true
        ComputeType: BUILD_GENERAL1_SMALL
        Image: aws/codebuild/standard:7.0
        EnvironmentVariables:
          - Name: PROJECT_NAME
            Type: PLAINTEXT
            Value: python-commons
      Source:
        Type: GITHUB
        Location: https://github.com/MySensorFactory/python-commons
        GitCloneDepth: 1

  DeployerCodeBuildProject:
    Type: AWS::CodeBuild::Project
    Properties:
      Name: DeployerCodeBuildProject
      ServiceRole: !GetAtt CodeBuildRole.Arn
      Artifacts:
        Type: NO_ARTIFACTS
      Environment:
        Type: LINUX_CONTAINER
        PrivilegedMode: true
        ComputeType: BUILD_GENERAL1_SMALL
        Image: aws/codebuild/standard:7.0
        EnvironmentVariables:
          - Name: BUCKET_NAME
            Type: PLAINTEXT
            Value: factory-ci-cd
          - Name: PROJECT_NAME
            Type: PLAINTEXT
            Value: users-service
          - Name: DOCKER_USERNAME
            Type: PARAMETER_STORE
            Value: /FactorySecrets/DOCKER_USERNAME
          - Name: DOCKER_PASSWORD
            Type: PARAMETER_STORE
            Value: /FactorySecrets/DOCKER_PASSWORD
          - Name: DOCKER_BUILD
            Type: PLAINTEXT
            Value: yes
      Source:
        Type: GITHUB
        Location: https://github.com/MySensorFactory/deployer
        GitCloneDepth: 1


  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrParam
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  FirstPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref FirstPublicSubnetCidrParam
      AvailabilityZone: !Ref FirstPublicSubnetAvailabilityZoneParam
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet

  SecondPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref SecondPublicSubnetCidrParam
      AvailabilityZone: !Ref SecondPublicSubnetAvailabilityZoneParam
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: !Ref PublicRouteCidrParam
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FirstPublicSubnet
      RouteTableId: !Ref PublicRouteTable

  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Ref KeyPairNameParam

  GlobalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Ref SecurityGroupNameParam
      GroupDescription: Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 10251
          ToPort: 10251
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 10257
          ToPort: 10257
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 10259
          ToPort: 10259
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2379
          ToPort: 2379
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2380
          ToPort: 2380
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 10250
          ToPort: 10250
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 6443
          ToPort: 6443
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 8285
          ToPort: 8285
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 8472
          ToPort: 8472
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 10252
          ToPort: 10252
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 30000
          ToPort: 32767
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIpv6: ::/0
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 0
          ToPort: 65535
          CidrIpv6: ::/0

  MasterNodeLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: MasterNodeLaunchTemplate
      VersionDescription: Initial version
      LaunchTemplateData:
        UserData:
          Fn::Base64: !Sub |
            ${CommonNodeInitScriptParam}
            ${MasterNodeInitScriptParam}
        ImageId: !Ref NodeAmi
        InstanceType: !Ref MasterInstanceTypeParam
        KeyName: !Ref KeyPair
        SecurityGroupIds:
          - !Ref GlobalSecurityGroup
        BlockDeviceMappings:
          - DeviceName: /dev/sda1
            Ebs:
              VolumeSize: 30
              VolumeType: gp2
              DeleteOnTermination: true

  SlaveNodeLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: SlaveNodeLaunchTemplate
      VersionDescription: Initial version
      LaunchTemplateData:
        UserData:
          Fn::Base64: !Sub |
            ${CommonNodeInitScriptParam}
            ${SlaveNodeInitScriptParam}
            ${DatabaseSlaveNodeInitScriptParam}
        ImageId: ami-0ab1a82de7ca5889c # ubuntu 20.04
        InstanceType: !Ref MasterInstanceTypeParam
        KeyName: !Ref KeyPair
        SecurityGroupIds:
          - !Ref GlobalSecurityGroup
        BlockDeviceMappings:
          - DeviceName: /dev/sda1
            Ebs:
              VolumeSize: 30
              VolumeType: gp2
              DeleteOnTermination: true

  MasterNode:
    Type: AWS::EC2::Instance
    DependsOn:
      - GlobalSecurityGroup
      - MasterNodeLaunchTemplate
      - CICDSQSQueue
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref MasterNodeLaunchTemplate
        Version: 1
      PrivateIpAddress: !Ref MasterPrivateAddressParam
      SubnetId: !Ref FirstPublicSubnet
      IamInstanceProfile: !Ref NodeInstanceProfile

  SlaveNode1:
    Type: AWS::EC2::Instance
    DependsOn:
      - GlobalSecurityGroup
      - SlaveNodeLaunchTemplate
      - CICDSQSQueue
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref SlaveNodeLaunchTemplate
        Version: 1
      PrivateIpAddress: !Ref SlaveNodePrivateAddressParam1
      SubnetId: !Ref FirstPublicSubnet
      IamInstanceProfile: !Ref NodeInstanceProfile

  SlaveNode2:
    Type: AWS::EC2::Instance
    DependsOn:
      - GlobalSecurityGroup
      - SlaveNodeLaunchTemplate
      - CICDSQSQueue
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref SlaveNodeLaunchTemplate
        Version: 1
      PrivateIpAddress: !Ref SlaveNodePrivateAddressParam2
      SubnetId: !Ref FirstPublicSubnet
      IamInstanceProfile: !Ref NodeInstanceProfile

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Name: ApplicationLoadBalancer
      Scheme: internet-facing
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: 60
      Subnets:
        - !Ref FirstPublicSubnet
        - !Ref SecondPublicSubnet
      SecurityGroups:
        - !Ref GlobalSecurityGroup

  ApplicationLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref CLusterTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  CLusterTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: CLusterTargetGroup
      Protocol: HTTP
      Port: 80
      VpcId: !Ref VPC
      HealthCheckPath: /health
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Targets:
        - Id: !Ref SlaveNode1
          Port: 30000
        - Id: !Ref SlaveNode2
          Port: 30000
      Matcher:
        HttpCode: 200

  VolumeAttachment:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      InstanceId: !Ref SlaveNode1
      VolumeId: !Ref DatabaseVolumeId
      Device: /dev/sdf

  NodeInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: NodeInstanceProfile
      Path: /
      Roles:
        - !Ref NodeRole

  NodeRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: NodeRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: NodePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - ssm:GetParameter
                  - ssm:GetParameters
                  - ssm:GetParametersByPath
                  - ssm:PutParameter
                Resource: "*"
              - Effect: "Allow"
                Action:
                  - codeartifact:GetAuthorizationToken
                  - codeartifact:ReadFromRepository
                  - sts:GetServiceBearerToken
                  - codeartifact:GetRepositoryEndpoint
                Resource: "*"
              - Effect: "Allow"
                Action:
                  - sns:Publish
                  - sns:Subscribe
                Resource: !Sub arn:aws:sns:${ZoneIdParam}:${AccountIdParam}:*
              - Effect: "Allow"
                Action:
                  - sqs:ReceiveMessage
                  - sqs:DeleteMessage
                  - sqs:GetQueueUrl
                  - sqs:GetQueueAttributes
                Resource: !Sub arn:aws:sqs:${ZoneIdParam}:${AccountIdParam}:*
              - Effect: "Allow"
                Action:
                  - s3:List*
                  - s3:GetObject
                Resource: "*"
              - Effect: "Allow"
                Action:
                  - ec2:AttachVolume
                  - ec2:CreateSnapshot
                  - ec2:CreateTags
                  - ec2:CreateVolume
                  - ec2:DeleteSnapshot
                  - ec2:DeleteTags
                  - ec2:DeleteVolume
                  - ec2:DescribeAvailabilityZones
                  - ec2:DescribeInstances
                  - ec2:DescribeSnapshots
                  - ec2:DescribeTags
                  - ec2:DescribeVolumes
                  - ec2:DescribeVolumesModifications
                  - ec2:DetachVolume
                  - ec2:ModifyVolume
                Resource: "*"

Outputs:
  CICDSQSQueue:
    Description: ARN of the created CICD SQS Queue
    Value: !Ref CICDSQSQueue

  PowertoolsLayerVersionArn:
    Description: ARN for the published Layer version
    Value: !Ref PowertoolsLambdaLayer
    Export:
      Name:
        Fn::Sub: PowertoolsLayerVersionArn-${AWS::StackName}

  MasterId:
    Description: Master ID
    Value: "MasterNode"

  NodeId:
    Description: Node ID
    Value: "Node"

  SecurityGroupId:
    Description: Security Group ID of the created Security Group
    Value: !Ref GlobalSecurityGroup

  KeyPairNameOutput:
    Description: Name of the EC2 Key Pair used for the master and nodes
    Value: !Ref KeyPair

  VPCId:
    Description: VPC ID
    Value: !Ref VPC
